Fix ellipsis breakage on smaller viewports

--- a/wagtailio/static/sass/components/_pagination.scss
+++ b/wagtailio/static/sass/components/_pagination.scss
@@ -39,7 +39,7 @@
 
     &__sequence {
         display: flex;
-        gap: 3px;
+        gap: 2px;
         list-style: none;
         align-items: center;
     }
